<resources>
    <string name="app_name">Codeforces.info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Profile</string>
    <string name="menu_gallery">Contests</string>
    <string name="menu_slideshow">Participation</string>

    <string name="home_second">Home Second</string>
    <string name="Handle">handle</string>
    <string name="Name">fname Lname</string>
    <string name="Rating">1500</string>
    <string name="Rank">newbie</string>
    <string name="MaxRating">All time best </string>
    <string name="MaxRank">pupil</string>
    <string name="ImageDescription">AVATAR OF USER</string>
    <string name="LoginButton">Enter</string>
    <string name="InputHandle">Your Handle</string>
    <string name="HandleStatus">status</string>
    <string name="nullWarning">Enter Your Handle first</string>
    <string name="invalidWarning">Invalid Handle!</string>
    <string name="waiting">Loading...</string>
    <string name="header_Search">Search</string>
    <string name="RemeberMeOff">remember me off</string>
    <string name="RemeberMeOn">remember me on</string>
    <string name="Login_rememberme">remember me</string>
    <string name="internetError">Check your internet connection  \n (or maybe Codeforces is down) </string>
    <string name="Country">country</string>
    <string name="Orgnztn">organization</string>
    <string name="FriendOf">friend of</string>
    <string name="Twousers">7users</string>
    <string name="Contri">contribution</string>
    <string name="contri">conribution</string>
    <string name="City">cityreal</string>
    <string name="CityLabrl">city</string>
    <string name="registered">registered on</string>
    <string name="registeredTime">11-02-2020 ist</string>
    <string name="LastOnline">lastOnline</string>
    <string name="dot">●</string>
    <string name="upcomingContests">Upcoming Contests</string>
    <string name="ContestName">Contests Name #788</string>
    <string name="constestID">1345</string>
    <string name="StartingAt">Starting at</string>
    <string name="duration">Duration</string>
    <string name="Participated">Participated</string>
    <string name="In">in</string>
    <string name="numberContests">22</string>
    <string name="contests">Contests</string>
    <string name="LabelRank">Rank</string>
    <string name="View">view</string>
    <string name="RecentSubs">Recent Submission</string>
    <string name="Last50">Last 30</string>
    <string name="subId">#57644563</string>
    <string name="ProblemName">Binary Period</string>
    <string name="verdict">OK</string>
    <string name="ProgLang">CNU C++14</string>
    <string name="TimeConsumed">30ms</string>
    <string name="MemConsumed">23KB</string>
    <string name="ReEnter">re-enter</string>
    <string name="internetConnection">"Check your internet connection! \n (or maybe Codeforces is down)"</string>
    <string name="menu_aboutapp">About app</string>
    <string name="about_copyright">Copyright © 2020 Nitin Thakur</string>
    <string name="about_weblink">Source code available at https://github.com/thakurnitin2684/Codeforces.info</string>
    <string name="about_email">For support or suggestion, email thakurnitin2684@gmail.com</string>
    <string name="about_credits">Application uses Codeforces API \n Icon derived from <b>dashboard</b> at material.io </string>
    <string name="quickaccess">Quick Access</string>
    <string name="qaHome">HOME</string>
    <string name="C">C</string>
    <string name="ode">CODE</string>
    <string name="Forces">FORCES</string>
    <string name="rating">RATING</string>
    <string name="myFriends">My friends</string>
    <string name="chngSettings">Change Settings</string>
    <string name="blogentries">Blog Entries</string>
    <string name="comments">comments</string>
    <string name="newEntry">Write New Blog Entry</string>
    <string name="myTlks">View my talks</string>
    <string name="teams">TEAMS</string>
    <string name="api">api</string>
    <string name="calendar">CALENDAR</string>
    <string name="DesktopView">Desktop View</string>
    <string name="mobileView">Mobile View</string>
    <string name="noUpcomingContest">No Upcoming Contest</string>

</resources>
