<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.thakurnitin2684.codeforces.ui.main.view.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home" />
    </fragment>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.thakurnitin2684.codeforces.ui.main.view.ContestsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.thakurnitin2684.codeforces.ui.main.view.ParticipationFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_quickaccess"
        android:name="com.thakurnitin2684.codeforces.ui.main.view.QuickAccessFragment"
        android:label="@string/quickaccess"
        tools:layout="@layout/fragment_quick" >
        <action
            android:id="@+id/action_nav_quickaccess_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>